[fix] - Lecture liens bandcamp : z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,6 @@ h3 {
 	display: flex;
     flex-direction: column;
     align-items: center;
-	z-index: -1;
 }
 .personal-works .studio-work {
 	height: 23vw;
@@ -320,7 +319,7 @@ h3 {
 	filter: gray; 
 	text-align: center;
 }
-.studio-work iframe:hover, .studio-work img:hover  {
+.large-player:hover, .studio-work img:hover  {
 	-webkit-filter: none;
 	-moz-filter: none;
 	-ms-filter: none;
@@ -499,6 +498,7 @@ textarea:hover {
 	}
 	header {
 		grid-area: unset;
+		z-index: 1;
 	}
 	main {
 		margin-right: 30px;
